// Vitest Snapshot v1

exports[`<Header/> > should render authenticated header 1`] = `
<div>
  <div>
    <header
      class="css-17ouny1"
    >
      <div
        class="_rightNav_9ej0w_15"
      >
        <div>
          Ponti UI
        </div>
      </div>
      <div
        class="_leftNav_9ej0w_14"
      >
        <div>
          Account
        </div>
      </div>
    </header>
  </div>
</div>
`;

exports[`<Header/> > should render unauthenticated header 1`] = `
<div>
  <div>
    <header
      class="css-17ouny1"
    >
      <div
        class="_rightNav_9ej0w_15"
      >
        <div>
          Ponti UI
        </div>
      </div>
      <div
        class="_leftNav_9ej0w_14"
      >
        <button
          class=" css-hcwumx"
          data-testid="loginButton"
          type="button"
        >
          Get Started
        </button>
      </div>
    </header>
  </div>
</div>
`;
